--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="navbar">
                 <img class="logo" src="images/logo.jpg">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">VOFM Muzaffarabad</a></li>
+                    <li><a href="#">VOKFM Muzaffarabad</a></li>
                     <li><a href="#">VOKFM Rawalakot</a></li>
                     <li><a href="#">VOKFM Bagh</a></li>
                 </ul>
